# AI_ed

./: .env  .gitignore  README.md  accounts.db  accounts.py  accounts_client.py  accounts_server.py  app.py  database.py  groww_client.py  market.py  mcp_params.py  package-lock.json  package.json  pyproject.toml  researcher_server.py  templates.py  traders.py  trading_floor.py
scripts/: reset.py  run_trader.py
src/: __init__.py
src/agents/: __init__.py  mcp_config.py  templates.py  trader.py
src/core/: __init__.py  models.py
src/mcp_servers/: __init__.py  __main__.py  accounts_client.py  accounts_server.py  market_server.py  push_server.py
src/services/: __init__.py  __main__.py  account_service.py  trading_floor.py
src/ui/: __init__.py  __main__.py  app.py  utils.py
src/utils/: __init__.py  formatting.py
tests/: __init__.py
