[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-floor"
version = "1.0.0"
description = "An autonomous multi-agent trading system for the Indian stock market"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Azmat Siddique"}
]
keywords = ["trading", "ai", "agents", "mcp", "indian-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
trading-floor = "src.services.trading_floor:main"
reset-accounts = "scripts.reset:reset_traders"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[project.urls]
Homepage = "https://github.com/azmatsiddique/AI_ed"
Repository = "https://github.com/azmatsiddique/AI_ed"
